# distributed-graph-system

./: .gitignore  Cargo.toml  Dockerfile  README.md  WHITEPAPER.md  compose.swarm.yml  compose.yml  deploy-cluster.sh  direct_fix.sh  fix_upload_issue.rs  hostfile  mpi-hostfile  mpi_hosts  run-mpi-cluster.sh  supervisor-master.conf  supervisor-worker.conf  supervisor.conf  test_api.sh  test_graph.txt  update_server.sh
.github/: codespell-ignore-words.txt  typos_config.toml
.github/workflows/: code-quality.yml  spelling.yml
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AlgorithmSelector.tsx  FormatSelector.tsx  GraphView.tsx  Header.tsx  MpiChip.tsx  NodeInputs.tsx  Results.tsx  UploadZone.tsx
frontend/src/utils/: parseGraph.ts
frontend/src/workers/: parseGraph.worker.ts
src/: distributed_processor.rs  file_processor.rs  graph.rs  lib.rs  main.rs  mpi_processor.rs  mpi_worker.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
