[package]
name = "dristributed-graph-system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
priority-queue = "1.3"
axum = { version = "0.7", features = ["multipart"]}
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }