[package]
name = "distributed-graph-system"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
priority-queue = "1.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
mpi = "0.8.0"
bincode = "1.3.2"

[[bin]]
name = "mpi_test"
path = "src/bin/mpi_test.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"